<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/background_new_order_main_page"
    android:padding="5dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10dp"

        android:orientation="horizontal"
        android:id="@+id/radioGroup">
        <RadioButton
            android:id="@+id/create_new_acc_radio_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/create_new_account"
            android:padding="5dp"
            android:textSize="17sp"
            android:checked="true"
            android:fontFamily="@font/sansation_regular"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/existing_acc_radio_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/associate_to_existing"
            android:padding="5dp"
            android:textSize="17sp"
            android:fontFamily="@font/sansation_regular"
            android:textColor="@color/black"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/existing_account_container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:text="Select Account:"
            android:textSize="17sp"
            android:textColor="@color/black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editbackground"
            android:orientation="vertical">
            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/item_one_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:spinnerMode="dialog"
                android:prompt="@string/spinner_title"
                />
        </LinearLayout>

        <!--<include
            android:id="@+id/userType_Spinner"
            layout="@layout/item_account_single_spinner"></include>-->
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/create_new_acc_main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/manual_credit_score_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/enter_manual_credit_score"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="17sp"/>

                <LinearLayout
                    android:id="@+id/credit_limit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/credit_amount_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="17sp"
                        android:hint="Credit Amount"
                        android:inputType="number"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_medium"
                        android:background="@drawable/editbackground"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/crdit_score_edittext"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:textSize="17sp"
                            android:hint="Credit Score"
                            android:inputType="number"
                            android:background="@drawable/editbackground"/>
                        <Button
                            android:id="@+id/check_cedit_score_button"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/button"
                            android:layout_marginLeft="5dp"
                            android:text="Check Credit Score"
                            android:textAllCaps="false"
                            android:fontFamily="@font/roboto_bold"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout

                    android:id="@+id/requested_credit_text"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="Requested Credit"
                        />

                </android.support.design.widget.TextInputLayout>


                <EditText
                    android:id="@+id/requested_credit_etext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="17sp"
                    android:hint="Requested Credit"
                    android:inputType="number"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/editbackground"/>
                <EditText
                    android:id="@+id/deposite_value_etext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="17sp"
                    android:hint="Deposit Value"
                    android:layout_marginTop="5dp"
                    android:inputType="number"
                    android:background="@drawable/editbackground"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:paddingTop="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="Contract Information:"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_marginLeft="2dp"

                        />
                </LinearLayout>

                <EditText
                    android:id="@+id/contract_period_etext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="17sp"
                    android:hint="Contract Period in Years"
                    android:layout_marginTop="5dp"
                    android:inputType="number"
                    android:background="@drawable/editbackground"/>
                <EditText
                    android:id="@+id/additional_terms_etext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="17sp"
                    android:hint="Additional Terms"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/editbackground"/>
                <EditText
                    android:id="@+id/addional_terms_notes"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="17sp"
                    android:hint="Additional Notes"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/editbackground"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:paddingTop="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="Billing Information:"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_marginLeft="2dp"

                        />
                </LinearLayout>

                <EditText
                    android:id="@+id/discount_value"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="17sp"
                    android:hint="Discount Value"
                    android:layout_marginTop="5dp"
                    android:inputType="number"
                    android:background="@drawable/editbackground"/>

                <RadioGroup
                    android:id="@+id/bilingfrequency_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/monthly_radiobutton"
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:text="Monthly"
                        />
                    <RadioButton
                        android:id="@+id/quarterly_radiobutton"
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:textSize="17sp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"

                        android:text="Quarterly"/>
                    <RadioButton
                        android:id="@+id/halfyearly_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textSize="17sp"
                        android:visibility="gone"
                        android:text="Halfyearly"/>
                    <RadioButton
                        android:id="@+id/yearly_radiobutton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="17sp"
                        android:visibility="gone"
                        android:text="Yearly"/>

                </RadioGroup>
                <Spinner
                    android:id="@+id/biling_cycle_id_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:background="@drawable/xtendedlyca_button"
                    android:textSize="17sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:fontFamily="@font/sansation_regular"
                    android:text="Cancel"/>

                <Button
                    android:id="@+id/save_and_continue"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/xtendedlyca_button"
                    android:textSize="17sp"
                    android:layout_marginLeft="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:fontFamily="@font/sansation_regular"
                    android:text="@string/continue_btn"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
